# ProtocolBot

./: CITATION.cff  README.md  install.sh  pyproject.toml
data/Protocol_Output/: PCR_Protocol_Output.xlsx  protocol_output_2026-4-1.xlsx
data/Stock_Repository/: Central_Protocol_Record.xlsx  ComponentRepository.xlsx  GeneletRepository.xlsx  GeneletRepository1.xlsx  Lab_Inventory.xlsx  Lab_Record_History.xlsx
experiments/: simple_example.py  template_code.py  template_protocol.py
src/protocol_bot/: __init__.py  export.py  generate.py  registry.py  repository.py  search.py  semantic.py  sort.py  structure.py  volume.py
src/protocol_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
