[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol_bot"
version = "0.1.0"
description = "A library for automated generation of DNA experiment protocol"
authors = [
  { name = "Tony Lu", email = "juncheng@andrew.cmu.edu" },
  { name = "Colin Yancey", email = "cyancey7@jhu.edu" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "openpyxl",
    "numpy",
    "inquirerpy",
    "rich"
]

[tool.setuptools.packages.find]
where = ["src"]